--- a/front-end/src/style.css
+++ b/front-end/src/style.css
@@ -548,7 +548,7 @@ button img {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
-    padding: 20px;
+    padding: 0px;
     background-color: var(--color-bg-light);
 }
 
@@ -569,7 +569,6 @@ button img {
 /* Styling for each product card */
 .product-card {
     background-color: var(--color-bg-light);
-    border: 1px solid var(--color-border-light);
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden;
@@ -849,4 +848,67 @@ button img {
     color: var(--color-accent-red);
 }
 
+.inline-pencil-button {
+    background: none;
+    border: none;
+    padding: 0;
+    width: 24px;
+    height: 24px;
+    cursor: pointer;
+    margin-left: 10px; /* Adjust as needed for spacing */
+}
 
+/* The popup container - hidden by default */
+.popup {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+    justify-content: center;
+    align-items: center;
+}
+
+/* Popup content */
+.popup-content {
+    background-color: #fff;
+    margin: auto;
+    border-radius: 15px;
+    padding: 20px;
+    width: 300px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    animation: fadeIn 0.3s;
+}
+
+/* Animation for popup */
+@keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+
+/* Close button */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.highlight {
+    background-color: var(--color-bg-dark); 
+    color: var(--color-text-light);
+    padding: 1px 4px; 
+    border-radius: 6px; 
+    display: inline-block; /* Ensures the padding and border-radius are applied correctly */
+}
