--- a/front-end/src/style.css
+++ b/front-end/src/style.css
@@ -82,7 +82,7 @@ body {
 
 /* Main content with 10% margin on left and right */
 .content {
-    margin: 74px 10% 0 10%;
+    margin: 74px 10% 20px 10%;
     background-color: var(--color-bg-light); 
     padding-top: 1px;
     box-sizing: border-box;
@@ -109,7 +109,7 @@ body {
 /* Media query for mobile devices */
 @media (max-width: 768px) {
     .content {
-        margin: 74px 10px 0 10px;
+        margin: 74px 10px 20px 10px;
     }
     .navbar .wrapper {
         margin: 0px 10px;
