--- a/front-end/src/style.css
+++ b/front-end/src/style.css
@@ -84,7 +84,7 @@ body {
 .content {
     margin: 74px 10% 20px 10%;
     background-color: var(--color-bg-light); 
-    padding-top: 1px;
+    padding-top: 20px;
     box-sizing: border-box;
 }
 
@@ -109,10 +109,11 @@ body {
 /* Media query for mobile devices */
 @media (max-width: 768px) {
     .content {
-        margin: 74px 10px 20px 10px;
+        padding: 20px 0;
+        margin: 74px 16px 20px 16px;
     }
     .navbar .wrapper {
-        margin: 0px 10px;
+        margin: 0px 16px;
     }
 }
 
