Added product custom columns in the employee portal and on account page. The values can be changed from teh employee portal

--- a/front-end/src/style.css
+++ b/front-end/src/style.css
@@ -201,9 +201,8 @@ select option {
 
 .custom-select {
     position: relative;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
+    width: 100%;
+    max-width: 300px;
 }
 
 .custom-select::before,
