--- a/front-end/src/style.css
+++ b/front-end/src/style.css
@@ -700,6 +700,7 @@ button img {
     width: 10px;
     height: 100%;
     border-left: 2px solid var(--color-border-disabled);
+    margin-top: 3.5px;
 }
 .StepProgress-item {
     position: relative;
@@ -730,26 +731,32 @@ button img {
 }
 .StepProgress-item.is-done::before {
     border-left: 2px solid var(--color-accent-green);
+    margin-top: 3.5px;
 }
 .StepProgress-item.is-done::after {
     content: "✔";
     font-size: 10px;
     color: var(--color-text-light);
     text-align: center;
+    padding-top: 0.5px;
+    margin-top: 3.5px;
     border: 2px solid var(--color-accent-green);
     background-color: var(--color-accent-green);
 }
 .StepProgress-item.current::before {
     border-left: 2px solid var(--color-accent-green);
+    margin-top: 3.5px;
 }
 .StepProgress-item.current::after {
     content: counter(list);
     padding-top: 1px;
+    margin-top: 3.5px;
     width: 19px;
     height: 18px;
     top: -4px;
     left: -40px;
     font-size: 14px;
+    font-weight: bold;
     text-align: center;
     color: var(--color-accent-green);
     border: 2px solid var(--color-accent-green);
