--- a/front-end/src/multiselect.css
+++ b/front-end/src/multiselect.css
@@ -14,18 +14,20 @@
 }
 
 .tags-container {
-    display: flex;
-    flex-wrap: wrap;
+    overflow-x: auto;
+    white-space: nowrap;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none; 
     background-color: var(--color-bg-light);
     color: var(--color-bg-dark);
     border: 1px solid var(--color-border-light);
     border-radius: 5px;
-    padding: 5px;
     width: 100%;
     max-width: 300px;
     position: relative;
     display: inline-block;
-    min-height: 30px;
+    height: 28px !important;
+    padding: 5px;
     height: auto;
 }
 
@@ -33,20 +35,19 @@
     background-color: var(--color-bg-disabled);
     border-radius: 3px;
     padding: 5px;
-    margin: 3px;
+    margin: 0 3px;
     display: inline-flex;
-    max-width: 100px;
 }
 .tag-close {
     margin-left: 5px;
     cursor: pointer;
 }
-select {
+/* select {
     border: none;
     width: 100%;
     margin-top: 5px;
     font-size: 14px;
-}
+} */
 
 .arrow-container {
     --size: 0.3rem;
@@ -72,7 +73,7 @@ select {
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     border: 1px solid var(--color-border-light);
     border-radius: 5px;
-    z-index: 1;
+    z-index: 10;
   }
   
   .dropdown-content a {
