--- a/front-end/src/style.css
+++ b/front-end/src/style.css
@@ -49,7 +49,18 @@ button:hover {
 .secondary-button:hover {
     background-color: var(--color-border-light);
     color: var(--color-text-light);
-    border: none;
+    border: 1px solid transparent;
+}
+
+.red-button {
+    background-color: transparent;
+    color: var(--color-accent-red);
+    border: 1px solid var(--color-accent-red);
+}
+
+.red-button:hover {
+    background-color: var(--color-accent-red);
+    color: var(--color-text-light);
 }
 
 /* Styling for inputs */
